Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59501

Padding properties do not work for QHeaderView::section

    XMLWordPrintable

Details

    • 6c088af0f9677e19447fb42b8a1e0e633664dd2e

    Description

      Padding properties do not work when set through style sheet for QHeaderView::section. If the padding is set for hover effect, it does work. If the background color or font is set, the padding is honored.

      Steps to reproduce:

      • Run attached sample
      • Observe the column headers
      • EXPECTED: Both column headers have padding of 40 pixels
      • ACTUAL: Column header sizes are scaled so that text does not properly fit and there is no apparent 40 pixel right padding visible

      Attachments

        1. qtbug59501.png
          qtbug59501.png
          19 kB
        2. qtbug59501.zip
          0.8 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            jussi_witick Jussi Witick
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes